--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,3 +1,3 @@
 {{- if .IsNode -}}
-<script src="{{ "js/load-more.js" | absURL }}"></script>
+<script src="{{ "js/load-more.js" | absURL }}" defer></script>
 {{- end -}}
